@@ -167,6 +167,7 @@ static GameDefs g = {
 	0,	// LESS_ARCTIC_TOWNS
 	60, // OCEAN
 	16, // CONTINENT_SIZE
+	0,  // TERRAIN_GRANULARITY
 	0,	// ARCHIPELAGO
 	30, // SEVER_LAND_BRIDGES
 	10, // SEA_LIMIT
